--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"postcss-load-config": "^3.1.4",
 		"prettier": "^2.5.1",
 		"prettier-plugin-svelte": "^2.5.0",
+		"sitemap": "^7.1.1",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.2.6",
 		"svelte-preprocess": "^4.10.5",
