--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build:css": "tailwindcss -m -i ./styles/app.css -o app/styles/app.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
-    "start": "cross-env NODE_ENV=production netlify dev"
+    "start": "remix-serve build",
+    "start:netlify": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
