--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "tailwindcss -w -i ./styles/app.css -o app/styles/app.css",
     "start": "remix-serve build",
-    "start:netlify": "cross-env NODE_ENV=production netlify dev",
-    "postinstall": "pnpm patch"
+    "start:netlify": "cross-env NODE_ENV=production netlify dev"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
